CHANGES
=======

* Tox testing with flake8 added
* Models changed to avoid import at top of file
* repo fixed
* double resource removed
* flask api cleared for github
* Flask api with test