@@ -4,7 +4,10 @@ aniso8601==1.1.0
 anyjson==0.3.3
 click==6.6
 eventlet==0.19.0
+mock==2.0.0
+flake8==2.5.4
 Flask==0.11.1
+Flask-HTTPAuth==3.1.2
 Flask-Migrate==1.8.0
 Flask-RESTful==0.3.5
 Flask-Script==2.0.5
@@ -27,7 +30,6 @@ python-dateutil==2.5.3
 python-editor==1.0
 pytz==2016.4
 PyYAML==3.11
-requests==2.10.0
 six==1.10.0
 SQLAlchemy==1.0.13
 Werkzeug==0.11.10
