@@ -4,7 +4,6 @@ envlist = pep8,py27
 [testenv]
 commands = nosetests
 deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
 
 [testenv:pep8]
 commands = flake8
